fixed the shift to the left

--- a/styles/main.css
+++ b/styles/main.css
@@ -14,6 +14,10 @@
 	display: block;
 }
 
+html {
+    overflow-y: overlay;
+}
+
 html, body {
 	max-width: 1200px;
 	margin: auto;
